# agent-secretary

./: .env.example  .gitignore  DESIGN.md  Makefile  WORKSPACE.md  agent.mjs  assistant.mjs  bridge.mjs  browser-sdk.js  commands.mjs  design.md  design_server.md  index.html  ingress.mjs  manifest.zst.json  package-lock.json  package.json  pyproject.toml  readme.md  sdk.d.ts  sdk.mjs  server.mjs  service-map.md  service-map.mjs  test-query.mjs
adapters/: slack.mjs
docs/: review_rules.md  test_checklist.md  workspace.md
docs/tasks/: research-review-rules.md
infra/: docker-compose.yml
prompts/: _shared.md  cto.md  dispatcher.md
prompts/leads/: compatibility.md  ops.md  product_ux.md  quality.md  security.md
prompts/specialists/compatibility/: external_api.md  internal_rpc.md  sdk.md
prompts/specialists/ops/: async_queue.md  cache.md  cost.md  db_migrations.md  infrastructure.md  observability.md  performance.md
prompts/specialists/product_ux/: accessibility.md  i18n.md  user_flow.md
prompts/specialists/quality/: complexity.md  config_separation.md  convention.md  test_quality.md
prompts/specialists/security/: authn_authz.md  crypto.md  dependencies.md  input_validation.md  pii.md  secrets_keys.md
prompts/workflows/: code_analyze.md  code_modify.md  linear_issue.md  pr_review_monolithic.md
scripts/: export-claude-credentials.sh
services/agents/: Dockerfile  pyproject.toml
services/agents/agents/: config.py  github_labels.py  llm.py  main.py  queue.py  runner.py  summary.py  trace.py  usage.py
services/agents/agents/personas/: _base.py  cto.py  dispatcher.py  registry.py
services/agents/agents/personas/leads/: compatibility.py  ops.py  product_ux.py  quality.py  security.py
services/agents/agents/personas/specialists/: specialist_agent.py
services/agents/agents/skills/: workspace.py
services/agents/agents/workflows/: code_analyze.py  monolithic_review.py  placeholder.py  pr_review.py
services/core/: Dockerfile  pyproject.toml
services/core/core/: classifier.py  config.py  main.py  queue.py
services/egress/: Dockerfile  pyproject.toml
services/egress/egress/: config.py  main.py  queue.py
services/egress/egress/plugins/: _base.py  cli.py  github.py  slack.py
services/ingress/: Dockerfile  pyproject.toml
services/ingress/ingress/: config.py  logging.py  main.py  publisher.py
services/ingress/ingress/dashboard/: compare.html  health.py  index.html  operations.py  reports.py  routes.py  traces.py
services/ingress/ingress/dashboard/static/: index.html
services/ingress/ingress/plugins/: _base.py  cli.py  github.py  slack.py
tests/: _llm_fake.py  conftest.py  test_agents_settings.py  test_code_analyze.py  test_dashboard.py  test_github_ingress.py  test_ingress_health.py  test_monolithic_review.py  test_operations_aggregator.py  test_persona_json_extraction.py  test_pipeline_smoke.py  test_placeholder_workflows.py  test_reports.py  test_review_rules.py  test_service_map.py  test_shadow_task.py  test_slack_egress.py  test_slack_ingress.py  test_usage_accumulator.py  test_workspace_skill.py
workspace/: EXAMPLE_DEBUG.md  REPOS.md
