[project]
name = "agent-secretary"
version = "0.0.0"
description = "Multi-agent PR review and code task automation system"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/schemas",
    "packages/config",
    "services/ingress",
    "services/core",
    "services/agents",
    "services/egress",
]

[tool.uv.sources]
agent-secretary-schemas = { workspace = true }
agent-secretary-config = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "httpx>=0.27",
    "psycopg-pool>=3.3.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
