[project]
name = "agent-secretary-agents"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "agent-secretary-schemas",
    "agent-secretary-config",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "structlog>=24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
