[project]
name = "agent-secretary-core"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "agent-secretary-schemas",
    "agent-secretary-config",
    "redis>=5.0",
    "structlog>=24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
