[project]
name = "agent-secretary-ingress"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "agent-secretary-schemas",
    "agent-secretary-config",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis>=5.0",
    "structlog>=24",
    # Slack channel plugin (Socket Mode + Web client for thread/buttons)
    "slack-sdk>=3.31",
    "aiohttp>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingress"]
